k8s/deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: dash
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dash
  template:
    metadata:
      labels:
        app: dash
    spec:
      containers:
      - name: container
        image: 579478677147.dkr.ecr.eu-central-1.amazonaws.com/ded/dash:$(Build.BuildId)
        ports:
        - containerPort: 80
          name: web
        volumeMounts:
        - name: data
          mountPath: /data
      volumes:
      - name: init-script
        configMap:
          name: init-script
          defaultMode: 484
          items:
          - key: init_dashboard_version.sh
            path: init_dashboard_version.sh
      - name: data
        emptyDir: {}
