k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: dash
  name: dash
  namespace: $(kubernetes-namespace)
  annotations:
    prometheus.io/scrape: 'true'
spec:
  ports:
  - name: external
    port: 80
    targetPort: web
  selector:
    app: dash
  type: ClusterIP
